--- a/src/main/resources/templates/admin/index.html
+++ b/src/main/resources/templates/admin/index.html
@@ -15,8 +15,8 @@
       <div class="ui inverted secondary stackable menu">
         <h2 class="ui teal header item">管理后台</h2>
         <a href="#" th:href="@{/admin/blogs}" class=" m-item item m-mobile-hide"><i class=" home icon"></i>博客</a>
-        <a href="#" class=" m-item item m-mobile-hide"><i class=" idea icon"></i>分类</a>
-        <a href="#" class="m-item item m-mobile-hide"><i class=" tags icon"></i>标签</a>
+        <a href="#" th:href="@{/admin/types}" class=" m-item item m-mobile-hide"><i class=" idea icon"></i>分类</a>
+        <a href="#" th:href="@{/admin/tags}" class="m-item item m-mobile-hide"><i class=" tags icon"></i>标签</a>
         <div class="right m-item m-mobile-hide menu">
           <div class="ui dropdown  item">
             <div class="text">
