--- a/src/main/resources/templates/admin/tags.html
+++ b/src/main/resources/templates/admin/tags.html
@@ -1,27 +1,27 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
-<head>
+<head th:replace="admin/_fragments :: head(~{::title})">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>博客管理</title>
+  <title>标签管理</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/semantic-ui/2.2.4/semantic.min.css">
-  <link rel="stylesheet" href="/css/me.css">
+  <link rel="stylesheet" href="../../static/css/me.css">
 </head>
 <body>
 
   <!--导航-->
-  <nav class="ui inverted attached segment m-padded-tb-mini m-shadow-small" >
+  <nav th:replace="admin/_fragments :: menu(3)" class="ui inverted attached segment m-padded-tb-mini m-shadow-small" >
     <div class="ui container">
       <div class="ui inverted secondary stackable menu">
         <h2 class="ui teal header item">管理后台</h2>
-        <a href="#" th:href="@{/admin/blogs}" class="active m-item item m-mobile-hide"><i class=" home icon"></i>博客</a>
+        <a href="#" th:href="@{/admin/blogs}" class=" m-item item m-mobile-hide"><i class=" home icon"></i>博客</a>
         <a href="#" th:href="@{/admin/types}" class=" m-item item m-mobile-hide"><i class=" idea icon"></i>分类</a>
-        <a href="#" th:href="@{/admin/tags}" class="m-item item m-mobile-hide"><i class=" tags icon"></i>标签</a>
+        <a href="#" th:href="@{/admin/tags}" class="active m-item item m-mobile-hide"><i class=" tags icon"></i>标签</a>
         <div class="right m-item m-mobile-hide menu">
           <div class="ui dropdown  item">
             <div class="text">
               <img class="ui avatar image" src="https://unsplash.it/100/100?image=1005">
-              Allen
+              李仁密
             </div>
             <i class="dropdown icon"></i>
             <div class="menu">
@@ -38,8 +38,8 @@
   <div class="ui attached pointing menu">
     <div class="ui container">
       <div class="right menu">
-        <a href="#" class="item">发布</a>
-        <a href="#" class="teal active item">列表</a>
+        <a href="#" th:href="@{/admin/tags/input}" class="item">新增</a>
+        <a href="#" th:href="@{/admin/tags}" class="teal active item">列表</a>
       </div>
     </div>
   </div>
@@ -47,66 +47,37 @@
   <!--中间内容-->
   <div  class="m-container-small m-padded-tb-big">
     <div class="ui container">
-      <form action="#" method="post" class="ui segment form">
-        <div class="inline fields">
-          <div class="field">
-            <input type="text" name="title" placeholder="标题">
-          </div>
-          <div class="field">
-            <div class="ui selection dropdown">
-              <input type="hidden" name="type">
-              <i class="dropdown icon"></i>
-              <div class="default text">分类</div>
-              <div class="menu">
-                <div class="item" data-value="1">错误日志</div>
-                <div class="item" data-value="2">开发者手册</div>
-              </div>
-            </div>
-          </div>
-          <div class="field">
-            <div class="ui checkbox">
-              <input type="checkbox" id="recommend" name="recommend">
-              <label for="recommend">推荐</label>
-            </div>
-          </div>
-          <div class="field">
-            <button class="ui mini teal basic button"><i class="search icon"></i>搜索</button>
-          </div>
-        </div>
-      </form>
-
-      <table class="ui celled table">
+      <div class="ui success message" th:unless="${#strings.isEmpty(message)}">
+        <i class="close icon"></i>
+        <div class="header">提示：</div>
+        <p th:text="${message}">恭喜，操作成功！</p>
+      </div>
+      <table class="ui compact teal table">
         <thead>
           <tr>
             <th></th>
-            <th>标题</th>
-            <th>类型</th>
-            <th>推荐</th>
-            <th>更新时间</th>
+            <th>名称</th>
             <th>操作</th>
           </tr>
         </thead>
         <tbody>
-          <tr>
-            <td>1</td>
-            <td>刻意练习清单</td>
-            <td>认知升级</td>
-            <td>是</td>
-            <td>2017-10-02 09:45</td>
+          <tr th:each="type,iterStat : ${page.content}">
+            <td th:text="${iterStat.count}">1</td>
+            <td th:text="${type.name}">刻意练习清单</td>
             <td>
-              <a href="#" class="ui mini teal basic button">编辑</a>
-              <a href="#" class="ui mini red basic button">删除</a>
+              <a href="#" th:href="@{/admin/tags/{id}/input(id=${type.id})}" class="ui mini teal basic button">编辑</a>
+              <a href="#" th:href="@{/admin/tags/{id}/delete(id=${type.id})}" class="ui mini red basic button">删除</a>
             </td>
           </tr>
         </tbody>
         <tfoot>
           <tr>
-            <th colspan="6">
-              <div class="ui mini pagination menu">
-                <a class=" item">上一页</a>
-                <a class=" item">下一页</a>
+            <th colspan="6" >
+              <div class="ui mini pagination menu" th:if="${page.totalPages}>1">
+                <a th:href="@{/admin/tags(page=${page.number}-1)}" class="  item" th:unless="${page.first}">上一页</a>
+                <a th:href="@{/admin/tags(page=${page.number}+1)}" class=" item" th:unless="${page.last}">下一页</a>
               </div>
-              <a href="#" class="ui mini right floated teal basic button">新增</a>
+              <a href="#" th:href="@{/admin/tags/input}"  class="ui mini right floated teal basic button">新增</a>
             </th>
           </tr>
         </tfoot>
@@ -117,13 +88,13 @@
   <br>
   <br>
   <!--底部footer-->
-  <footer class="ui inverted vertical segment m-padded-tb-massive">
+  <footer th:replace="admin/_fragments :: footer" class="ui inverted vertical segment m-padded-tb-massive">
     <div class="ui center aligned container">
       <div class="ui inverted divided stackable grid">
         <div class="three wide column">
           <div class="ui inverted link list">
             <div class="item">
-              <img src="/images/wechat.jpg" class="ui rounded image" alt="" style="width: 110px">
+              <img src="../../static/images/wechat.jpg" class="ui rounded image" alt="" style="width: 110px">
             </div>
           </div>
         </div>
@@ -152,10 +123,10 @@
     </div>
 
   </footer>
-
-  <script src="/js/jquery-1.11.0.min.js"></script>
-  <script src="/js/semantic.min.js"></script>
-
+  <!--/*/<th:block th:replace="_fragments :: script">/*/-->
+  <script src="https://cdn.jsdelivr.net/npm/jquery@3.2/dist/jquery.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/semantic-ui/2.2.4/semantic.min.js"></script>
+  <!--/*/</th:block>/*/-->
   <script>
     $('.menu.toggle').click(function () {
       $('.m-item').toggleClass('m-mobile-hide');
@@ -165,6 +136,13 @@
       on : 'hover'
     });
 
+    //消息提示关闭初始化
+    $('.message .close')
+      .on('click', function () {
+        $(this)
+          .closest('.message')
+          .transition('fade');
+      });
   </script>
 </body>
 </html>
