--- a/src/main/resources/templates/admin/types.html
+++ b/src/main/resources/templates/admin/types.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>博客管理</title>
+  <title>Types</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/semantic-ui/2.2.4/semantic.min.css">
   <link rel="stylesheet" href="/css/me.css">
 </head>
@@ -13,10 +13,10 @@
   <nav class="ui inverted attached segment m-padded-tb-mini m-shadow-small" >
     <div class="ui container">
       <div class="ui inverted secondary stackable menu">
-        <h2 class="ui teal header item">管理后台</h2>
-        <a href="#" th:href="@{/admin/blogs}" class="active m-item item m-mobile-hide"><i class=" home icon"></i>博客</a>
-        <a href="#" th:href="@{/admin/types}" class=" m-item item m-mobile-hide"><i class=" idea icon"></i>分类</a>
-        <a href="#" th:href="@{/admin/tags}" class="m-item item m-mobile-hide"><i class=" tags icon"></i>标签</a>
+        <h2 class="ui teal header item">Admin</h2>
+        <a href="#" th:href="@{/admin/blogs}" class=" m-item item m-mobile-hide"><i class=" home icon"></i>Blog</a>
+        <a href="#" th:href="@{/admin/types}" class="active m-item item m-mobile-hide"><i class=" idea icon"></i>Type</a>
+        <a href="#" th:href="@{/admin/tags}" class="m-item item m-mobile-hide"><i class=" tags icon"></i>Tag</a>
         <div class="right m-item m-mobile-hide menu">
           <div class="ui dropdown  item">
             <div class="text">
@@ -25,7 +25,7 @@
             </div>
             <i class="dropdown icon"></i>
             <div class="menu">
-              <a href="#" class="item">注销</a>
+              <a href="#" th:href="@{/admin/logout}" class="item">Logout</a>
             </div>
           </div>
         </div>
@@ -35,11 +35,12 @@
       <i class="sidebar icon"></i>
     </a>
   </nav>
+
   <div class="ui attached pointing menu">
     <div class="ui container">
       <div class="right menu">
-        <a href="#" class="item">发布</a>
-        <a href="#" class="teal active item">列表</a>
+        <a href="#" th:href="@{/admin/types/input}" class="item">New</a>
+        <a href="#" th:href="@{/admin/types}" class="teal active item">List</a>
       </div>
     </div>
   </div>
@@ -47,66 +48,37 @@
   <!--中间内容-->
   <div  class="m-container-small m-padded-tb-big">
     <div class="ui container">
-      <form action="#" method="post" class="ui segment form">
-        <div class="inline fields">
-          <div class="field">
-            <input type="text" name="title" placeholder="标题">
-          </div>
-          <div class="field">
-            <div class="ui selection dropdown">
-              <input type="hidden" name="type">
-              <i class="dropdown icon"></i>
-              <div class="default text">分类</div>
-              <div class="menu">
-                <div class="item" data-value="1">错误日志</div>
-                <div class="item" data-value="2">开发者手册</div>
-              </div>
-            </div>
-          </div>
-          <div class="field">
-            <div class="ui checkbox">
-              <input type="checkbox" id="recommend" name="recommend">
-              <label for="recommend">推荐</label>
-            </div>
-          </div>
-          <div class="field">
-            <button class="ui mini teal basic button"><i class="search icon"></i>搜索</button>
-          </div>
-        </div>
-      </form>
-
-      <table class="ui celled table">
+      <div class="ui success message" th:unless="${#strings.isEmpty(message)}">
+        <i class="close icon"></i>
+        <div class="header">Note: </div>
+        <p th:text="${message}"></p>
+      </div>
+      <table class="ui compact teal table">
         <thead>
           <tr>
             <th></th>
-            <th>标题</th>
-            <th>类型</th>
-            <th>推荐</th>
-            <th>更新时间</th>
-            <th>操作</th>
+            <th>Name</th>
+            <th>Operation</th>
           </tr>
         </thead>
         <tbody>
-          <tr>
-            <td>1</td>
-            <td>刻意练习清单</td>
-            <td>认知升级</td>
-            <td>是</td>
-            <td>2017-10-02 09:45</td>
+          <tr th:each="type,iterStat : ${page.content}">
+            <td th:text="${iterStat.count}"></td>
+            <td th:text="${type.name}"></td>
             <td>
-              <a href="#" class="ui mini teal basic button">编辑</a>
-              <a href="#" class="ui mini red basic button">删除</a>
+              <a href="#" th:href="@{/admin/types/{id}/input(id=${type.id})}" class="ui mini teal basic button">Edit</a>
+              <a href="#" th:href="@{/admin/types/{id}/delete(id=${type.id})}" class="ui mini red basic button">Delete</a>
             </td>
           </tr>
         </tbody>
         <tfoot>
           <tr>
-            <th colspan="6">
-              <div class="ui mini pagination menu">
-                <a class=" item">上一页</a>
-                <a class=" item">下一页</a>
+            <th colspan="6" >
+              <div class="ui mini pagination menu" th:if="${page.totalPages}>1">
+                <a th:href="@{/admin/types(page=${page.number}-1)}" class="  item" th:unless="${page.first}">Last</a>
+                <a th:href="@{/admin/types(page=${page.number}+1)}" class=" item" th:unless="${page.last}">Next</a>
               </div>
-              <a href="#" class="ui mini right floated teal basic button">新增</a>
+              <a href="#" th:href="@{/admin/types/input}"  class="ui mini right floated teal basic button">New</a>
             </th>
           </tr>
         </tfoot>
@@ -116,6 +88,7 @@
 
   <br>
   <br>
+  <br><br><br><br><br><br>
   <!--底部footer-->
   <footer class="ui inverted vertical segment m-padded-tb-massive">
     <div class="ui center aligned container">
@@ -165,6 +138,13 @@
       on : 'hover'
     });
 
+    //消息提示关闭初始化
+    $('.message .close')
+      .on('click', function () {
+        $(this)
+          .closest('.message')
+          .transition('fade');
+      });
   </script>
 </body>
 </html>
