--- a/src/main/resources/templates/admin/tags-input.html
+++ b/src/main/resources/templates/admin/tags-input.html
@@ -1,31 +1,31 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
-<head th:replace="admin/_fragments :: head(~{::title})">
+<head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>标签新增</title>
+  <title>New a Tag</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/semantic-ui/2.2.4/semantic.min.css">
-  <link rel="stylesheet" href="../../static/css/me.css">
+  <link rel="stylesheet" href="/css/me.css">
 </head>
 <body>
 
   <!--导航-->
-  <nav th:replace="admin/_fragments :: menu(3)"  class="ui inverted attached segment m-padded-tb-mini m-shadow-small" >
+  <nav class="ui inverted attached segment m-padded-tb-mini m-shadow-small" >
     <div class="ui container">
       <div class="ui inverted secondary stackable menu">
-        <h2 class="ui teal header item">管理后台</h2>
-        <a href="#" th:href="@{/admin/blogs}" class=" m-item item m-mobile-hide"><i class=" home icon"></i>博客</a>
-        <a href="#" th:href="@{/admin/types}" class=" m-item item m-mobile-hide"><i class=" idea icon"></i>分类</a>
-        <a href="#" th:href="@{/admin/tags}" class="active m-item item m-mobile-hide"><i class=" tags icon"></i>标签</a>
+        <h2 class="ui teal header item">Admin</h2>
+        <a href="#" th:href="@{/admin/blogs}" class=" m-item item m-mobile-hide"><i class=" home icon"></i>Blog</a>
+        <a href="#" th:href="@{/admin/types}" class=" m-item item m-mobile-hide"><i class=" idea icon"></i>Type</a>
+        <a href="#" th:href="@{/admin/tags}" class="active m-item item m-mobile-hide"><i class=" tags icon"></i>Tag</a>
         <div class="right m-item m-mobile-hide menu">
           <div class="ui dropdown  item">
             <div class="text">
               <img class="ui avatar image" src="https://unsplash.it/100/100?image=1005">
-              李仁密
+              Allen
             </div>
             <i class="dropdown icon"></i>
             <div class="menu">
-              <a href="#" class="item">注销</a>
+              <a href="#" th:href="@{/admin/logout}" class="item">Logout</a>
             </div>
           </div>
         </div>
@@ -38,8 +38,8 @@
   <div class="ui attached pointing menu">
     <div class="ui container">
       <div class="right menu">
-        <a href="#" th:href="@{/admin/tags/input}" class="active item">新增</a>
-        <a href="#" th:href="@{/admin/tags}" class="teal  item">列表</a>
+        <a href="#" th:href="@{/admin/tags/input}" class="active item">New</a>
+        <a href="#" th:href="@{/admin/tags}" class="teal  item">List</a>
       </div>
     </div>
   </div>
@@ -57,16 +57,10 @@
         </div>
 
         <div class="ui error message"></div>
-        <!--/*/
-        <div class="ui negative message" th:if="${#fields.hasErrors('name')}"  >
-          <i class="close icon"></i>
-          <div class="header">验证失败</div>
-          <p th:errors="*{name}">提交信息不符合规则</p>
-        </div>
-         /*/-->
+
         <div class="ui right aligned container">
-          <button type="button" class="ui button" onclick="window.history.go(-1)" >返回</button>
-          <button class="ui teal submit button">提交</button>
+          <button type="button" class="ui button" onclick="window.history.go(-1)" >Cancel</button>
+          <button class="ui teal submit button">Submit</button>
         </div>
 
       </form>
@@ -82,13 +76,13 @@
   <br>
   <br>
   <!--底部footer-->
-  <footer th:replace="admin/_fragments :: footer" class="ui inverted vertical segment m-padded-tb-massive">
+  <footer class="ui inverted vertical segment m-padded-tb-massive">
     <div class="ui center aligned container">
       <div class="ui inverted divided stackable grid">
         <div class="three wide column">
           <div class="ui inverted link list">
             <div class="item">
-              <img src="../../static/images/wechat.jpg" class="ui rounded image" alt="" style="width: 110px">
+              <img src="/images/wechat.jpg" class="ui rounded image" alt="" style="width: 110px">
             </div>
           </div>
         </div>
@@ -118,10 +112,8 @@
 
   </footer>
 
-  <!--/*/<th:block th:replace="admin/_fragments :: script">/*/-->
-  <script src="https://cdn.jsdelivr.net/npm/jquery@3.2/dist/jquery.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/semantic-ui/2.2.4/semantic.min.js"></script>
-  <!--/*/</th:block>/*/-->
+  <script src="/js/jquery-1.11.0.min.js"></script>
+  <script src="/js/semantic.min.js"></script>
 
   <script>
 
