--- a/src/main/resources/templates/admin/tags.html
+++ b/src/main/resources/templates/admin/tags.html
@@ -1,31 +1,31 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
-<head th:replace="admin/_fragments :: head(~{::title})">
+<head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>标签管理</title>
+  <title>Tags</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/semantic-ui/2.2.4/semantic.min.css">
-  <link rel="stylesheet" href="../../static/css/me.css">
+  <link rel="stylesheet" href="/css/me.css">
 </head>
 <body>
 
   <!--导航-->
-  <nav th:replace="admin/_fragments :: menu(3)" class="ui inverted attached segment m-padded-tb-mini m-shadow-small" >
+  <nav class="ui inverted attached segment m-padded-tb-mini m-shadow-small" >
     <div class="ui container">
       <div class="ui inverted secondary stackable menu">
-        <h2 class="ui teal header item">管理后台</h2>
-        <a href="#" th:href="@{/admin/blogs}" class=" m-item item m-mobile-hide"><i class=" home icon"></i>博客</a>
-        <a href="#" th:href="@{/admin/types}" class=" m-item item m-mobile-hide"><i class=" idea icon"></i>分类</a>
-        <a href="#" th:href="@{/admin/tags}" class="active m-item item m-mobile-hide"><i class=" tags icon"></i>标签</a>
+        <h2 class="ui teal header item">Admin</h2>
+        <a href="#" th:href="@{/admin/blogs}" class=" m-item item m-mobile-hide"><i class=" home icon"></i>Blog</a>
+        <a href="#" th:href="@{/admin/types}" class=" m-item item m-mobile-hide"><i class=" idea icon"></i>Type</a>
+        <a href="#" th:href="@{/admin/tags}" class="active m-item item m-mobile-hide"><i class=" tags icon"></i>Tag</a>
         <div class="right m-item m-mobile-hide menu">
           <div class="ui dropdown  item">
             <div class="text">
               <img class="ui avatar image" src="https://unsplash.it/100/100?image=1005">
-              李仁密
+              Allen
             </div>
             <i class="dropdown icon"></i>
             <div class="menu">
-              <a href="#" class="item">注销</a>
+              <a href="#" th:href="@{/admin/logout}" class="item">Logout</a>
             </div>
           </div>
         </div>
@@ -38,8 +38,8 @@
   <div class="ui attached pointing menu">
     <div class="ui container">
       <div class="right menu">
-        <a href="#" th:href="@{/admin/tags/input}" class="item">新增</a>
-        <a href="#" th:href="@{/admin/tags}" class="teal active item">列表</a>
+        <a href="#" th:href="@{/admin/tags/input}" class="item">New</a>
+        <a href="#" th:href="@{/admin/tags}" class="teal active item">List</a>
       </div>
     </div>
   </div>
@@ -49,24 +49,24 @@
     <div class="ui container">
       <div class="ui success message" th:unless="${#strings.isEmpty(message)}">
         <i class="close icon"></i>
-        <div class="header">提示：</div>
-        <p th:text="${message}">恭喜，操作成功！</p>
+        <div class="header">Note：</div>
+        <p th:text="${message}"></p>
       </div>
       <table class="ui compact teal table">
         <thead>
           <tr>
             <th></th>
-            <th>名称</th>
-            <th>操作</th>
+            <th>Name</th>
+            <th>Operation</th>
           </tr>
         </thead>
         <tbody>
-          <tr th:each="type,iterStat : ${page.content}">
-            <td th:text="${iterStat.count}">1</td>
-            <td th:text="${type.name}">刻意练习清单</td>
+          <tr th:each="tag,iterStat : ${page.content}">
+            <td th:text="${iterStat.count}"></td>
+            <td th:text="${tag.name}"></td>
             <td>
-              <a href="#" th:href="@{/admin/tags/{id}/input(id=${type.id})}" class="ui mini teal basic button">编辑</a>
-              <a href="#" th:href="@{/admin/tags/{id}/delete(id=${type.id})}" class="ui mini red basic button">删除</a>
+              <a href="#" th:href="@{/admin/tags/{id}/input(id=${tag.id})}" class="ui mini teal basic button">Edit</a>
+              <a href="#" th:href="@{/admin/tags/{id}/delete(id=${tag.id})}" class="ui mini red basic button">Delete</a>
             </td>
           </tr>
         </tbody>
@@ -74,10 +74,10 @@
           <tr>
             <th colspan="6" >
               <div class="ui mini pagination menu" th:if="${page.totalPages}>1">
-                <a th:href="@{/admin/tags(page=${page.number}-1)}" class="  item" th:unless="${page.first}">上一页</a>
-                <a th:href="@{/admin/tags(page=${page.number}+1)}" class=" item" th:unless="${page.last}">下一页</a>
+                <a th:href="@{/admin/tags(page=${page.number}-1)}" class="  item" th:unless="${page.first}">Last</a>
+                <a th:href="@{/admin/tags(page=${page.number}+1)}" class=" item" th:unless="${page.last}">Next</a>
               </div>
-              <a href="#" th:href="@{/admin/tags/input}"  class="ui mini right floated teal basic button">新增</a>
+              <a href="#" th:href="@{/admin/tags/input}"  class="ui mini right floated teal basic button">New</a>
             </th>
           </tr>
         </tfoot>
@@ -88,13 +88,13 @@
   <br>
   <br>
   <!--底部footer-->
-  <footer th:replace="admin/_fragments :: footer" class="ui inverted vertical segment m-padded-tb-massive">
+  <footer class="ui inverted vertical segment m-padded-tb-massive">
     <div class="ui center aligned container">
       <div class="ui inverted divided stackable grid">
         <div class="three wide column">
           <div class="ui inverted link list">
             <div class="item">
-              <img src="../../static/images/wechat.jpg" class="ui rounded image" alt="" style="width: 110px">
+              <img src="/images/wechat.jpg" class="ui rounded image" alt="" style="width: 110px">
             </div>
           </div>
         </div>
@@ -123,10 +123,10 @@
     </div>
 
   </footer>
-  <!--/*/<th:block th:replace="_fragments :: script">/*/-->
-  <script src="https://cdn.jsdelivr.net/npm/jquery@3.2/dist/jquery.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/semantic-ui/2.2.4/semantic.min.js"></script>
-  <!--/*/</th:block>/*/-->
+
+  <script src="/js/jquery-1.11.0.min.js"></script>
+  <script src="/js/semantic.min.js"></script>
+
   <script>
     $('.menu.toggle').click(function () {
       $('.m-item').toggleClass('m-mobile-hide');
